// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SkillGroupsDocToCsvTransform should correctly transform SkillGroup data to CSV for a model with a single language 1`] = `
[
  {
    "ALTLABELS_EN": "",
    "CODE": "code_0",
    "CREATEDAT": "1970-01-01T00:00:00.000Z",
    "DESCRIPTION_EN": "description_0_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "ID": "000000000000000000000000",
    "ORIGINURI": "originUri_0_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "SkillGroup_0_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "SCOPENOTE_EN": "scopeNote_0_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "UPDATEDAT": "1970-01-01T00:00:00.000Z",
    "UUIDHISTORY": "",
  },
  {
    "ALTLABELS_EN": "altLabel_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "CODE": "code_1",
    "CREATEDAT": "1970-01-01T00:00:00.001Z",
    "DESCRIPTION_EN": "description_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "ID": "000000000000000000000001",
    "ORIGINURI": "originUri_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "SkillGroup_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "SCOPENOTE_EN": "scopeNote_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "UPDATEDAT": "1970-01-01T00:00:00.001Z",
    "UUIDHISTORY": "uuidHistory_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuidHistory_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
  },
  {
    "ALTLABELS_EN": "",
    "CODE": "code_2",
    "CREATEDAT": "1970-01-01T00:00:00.002Z",
    "DESCRIPTION_EN": "description_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "ID": "000000000000000000000002",
    "ORIGINURI": "originUri_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "SkillGroup_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "SCOPENOTE_EN": "scopeNote_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "UPDATEDAT": "1970-01-01T00:00:00.002Z",
    "UUIDHISTORY": "",
  },
  {
    "ALTLABELS_EN": "altLabel_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "CODE": "code_3",
    "CREATEDAT": "1970-01-01T00:00:00.003Z",
    "DESCRIPTION_EN": "description_3_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "ID": "000000000000000000000003",
    "ORIGINURI": "originUri_3_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "SkillGroup_3_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "SCOPENOTE_EN": "scopeNote_3_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "UPDATEDAT": "1970-01-01T00:00:00.003Z",
    "UUIDHISTORY": "uuidHistory_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuidHistory_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
  },
  {
    "ALTLABELS_EN": "",
    "CODE": "code_4",
    "CREATEDAT": "1970-01-01T00:00:00.004Z",
    "DESCRIPTION_EN": "description_4_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "ID": "000000000000000000000004",
    "ORIGINURI": "originUri_4_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "SkillGroup_4_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "SCOPENOTE_EN": "scopeNote_4_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "UPDATEDAT": "1970-01-01T00:00:00.004Z",
    "UUIDHISTORY": "",
  },
  {
    "ALTLABELS_EN": "altLabel_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "CODE": "code_5",
    "CREATEDAT": "1970-01-01T00:00:00.005Z",
    "DESCRIPTION_EN": "description_5_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "ID": "000000000000000000000005",
    "ORIGINURI": "originUri_5_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "SkillGroup_5_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "SCOPENOTE_EN": "scopeNote_5_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "UPDATEDAT": "1970-01-01T00:00:00.005Z",
    "UUIDHISTORY": "uuidHistory_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuidHistory_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
  },
]
`;

exports[`SkillGroupsDocToCsvTransform should correctly transform SkillGroup data to CSV for a model with a single language 2`] = `
""ID","ORIGINURI","UUIDHISTORY","CODE","SCOPENOTE_EN","PREFERREDLABEL_EN","ALTLABELS_EN","DESCRIPTION_EN","CREATEDAT","UPDATEDAT"
"000000000000000000000000","originUri_0_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","code_0","scopeNote_0_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","SkillGroup_0_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","description_0_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","1970-01-01T00:00:00.000Z","1970-01-01T00:00:00.000Z"
"000000000000000000000001","originUri_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","uuidHistory_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuidHistory_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","code_1","scopeNote_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","SkillGroup_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","altLabel_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","description_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","1970-01-01T00:00:00.001Z","1970-01-01T00:00:00.001Z"
"000000000000000000000002","originUri_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","code_2","scopeNote_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","SkillGroup_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","description_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","1970-01-01T00:00:00.002Z","1970-01-01T00:00:00.002Z"
"000000000000000000000003","originUri_3_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","uuidHistory_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuidHistory_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","code_3","scopeNote_3_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","SkillGroup_3_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","altLabel_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","description_3_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","1970-01-01T00:00:00.003Z","1970-01-01T00:00:00.003Z"
"000000000000000000000004","originUri_4_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","code_4","scopeNote_4_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","SkillGroup_4_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","description_4_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","1970-01-01T00:00:00.004Z","1970-01-01T00:00:00.004Z"
"000000000000000000000005","originUri_5_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","uuidHistory_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuidHistory_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","code_5","scopeNote_5_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","SkillGroup_5_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","altLabel_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","description_5_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","1970-01-01T00:00:00.005Z","1970-01-01T00:00:00.005Z"
"
`;

exports[`SkillGroupsDocToCsvTransform should correctly transform SkillGroup data to CSV for a model with multiple languages 1`] = `
[
  {
    "ALTLABELS_EN": "",
    "ALTLABELS_FR": "",
    "CODE": "code_0",
    "CREATEDAT": "1970-01-01T00:00:00.000Z",
    "DESCRIPTION_EN": "description_0_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "DESCRIPTION_FR": "",
    "ID": "000000000000000000000000",
    "ORIGINURI": "originUri_0_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "SkillGroup_0_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_FR": "",
    "SCOPENOTE_EN": "scopeNote_0_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "SCOPENOTE_FR": "",
    "UPDATEDAT": "1970-01-01T00:00:00.000Z",
    "UUIDHISTORY": "",
  },
  {
    "ALTLABELS_EN": "altLabel_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "ALTLABELS_FR": "fr_altLabel_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
",
    "CODE": "code_1",
    "CREATEDAT": "1970-01-01T00:00:00.001Z",
    "DESCRIPTION_EN": "description_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "DESCRIPTION_FR": "fr_description_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "ID": "000000000000000000000001",
    "ORIGINURI": "originUri_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "SkillGroup_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_FR": "fr_SkillGroup_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "SCOPENOTE_EN": "scopeNote_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "SCOPENOTE_FR": "fr_scopeNote_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "UPDATEDAT": "1970-01-01T00:00:00.001Z",
    "UUIDHISTORY": "uuidHistory_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuidHistory_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
  },
  {
    "ALTLABELS_EN": "",
    "ALTLABELS_FR": "",
    "CODE": "code_2",
    "CREATEDAT": "1970-01-01T00:00:00.002Z",
    "DESCRIPTION_EN": "description_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "DESCRIPTION_FR": "",
    "ID": "000000000000000000000002",
    "ORIGINURI": "originUri_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "SkillGroup_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_FR": "",
    "SCOPENOTE_EN": "scopeNote_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "SCOPENOTE_FR": "",
    "UPDATEDAT": "1970-01-01T00:00:00.002Z",
    "UUIDHISTORY": "",
  },
  {
    "ALTLABELS_EN": "altLabel_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "ALTLABELS_FR": "fr_altLabel_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
",
    "CODE": "code_3",
    "CREATEDAT": "1970-01-01T00:00:00.003Z",
    "DESCRIPTION_EN": "description_3_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "DESCRIPTION_FR": "fr_description_3_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "ID": "000000000000000000000003",
    "ORIGINURI": "originUri_3_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "SkillGroup_3_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_FR": "fr_SkillGroup_3_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "SCOPENOTE_EN": "scopeNote_3_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "SCOPENOTE_FR": "fr_scopeNote_3_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "UPDATEDAT": "1970-01-01T00:00:00.003Z",
    "UUIDHISTORY": "uuidHistory_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuidHistory_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
  },
  {
    "ALTLABELS_EN": "",
    "ALTLABELS_FR": "",
    "CODE": "code_4",
    "CREATEDAT": "1970-01-01T00:00:00.004Z",
    "DESCRIPTION_EN": "description_4_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "DESCRIPTION_FR": "",
    "ID": "000000000000000000000004",
    "ORIGINURI": "originUri_4_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "SkillGroup_4_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_FR": "",
    "SCOPENOTE_EN": "scopeNote_4_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "SCOPENOTE_FR": "",
    "UPDATEDAT": "1970-01-01T00:00:00.004Z",
    "UUIDHISTORY": "",
  },
  {
    "ALTLABELS_EN": "altLabel_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "ALTLABELS_FR": "fr_altLabel_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
",
    "CODE": "code_5",
    "CREATEDAT": "1970-01-01T00:00:00.005Z",
    "DESCRIPTION_EN": "description_5_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "DESCRIPTION_FR": "fr_description_5_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "ID": "000000000000000000000005",
    "ORIGINURI": "originUri_5_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "SkillGroup_5_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_FR": "fr_SkillGroup_5_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "SCOPENOTE_EN": "scopeNote_5_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "SCOPENOTE_FR": "fr_scopeNote_5_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "UPDATEDAT": "1970-01-01T00:00:00.005Z",
    "UUIDHISTORY": "uuidHistory_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuidHistory_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
  },
]
`;

exports[`SkillGroupsDocToCsvTransform should correctly transform SkillGroup data to CSV for a model with multiple languages 2`] = `
""ID","ORIGINURI","UUIDHISTORY","CODE","SCOPENOTE_EN","SCOPENOTE_FR","PREFERREDLABEL_EN","PREFERREDLABEL_FR","ALTLABELS_EN","ALTLABELS_FR","DESCRIPTION_EN","DESCRIPTION_FR","CREATEDAT","UPDATEDAT"
"000000000000000000000000","originUri_0_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","code_0","scopeNote_0_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","SkillGroup_0_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","","","description_0_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","1970-01-01T00:00:00.000Z","1970-01-01T00:00:00.000Z"
"000000000000000000000001","originUri_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","uuidHistory_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuidHistory_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","code_1","scopeNote_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","fr_scopeNote_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","SkillGroup_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","fr_SkillGroup_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","altLabel_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","fr_altLabel_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
","description_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","fr_description_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","1970-01-01T00:00:00.001Z","1970-01-01T00:00:00.001Z"
"000000000000000000000002","originUri_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","code_2","scopeNote_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","SkillGroup_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","","","description_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","1970-01-01T00:00:00.002Z","1970-01-01T00:00:00.002Z"
"000000000000000000000003","originUri_3_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","uuidHistory_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuidHistory_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","code_3","scopeNote_3_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","fr_scopeNote_3_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","SkillGroup_3_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","fr_SkillGroup_3_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","altLabel_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","fr_altLabel_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
","description_3_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","fr_description_3_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","1970-01-01T00:00:00.003Z","1970-01-01T00:00:00.003Z"
"000000000000000000000004","originUri_4_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","code_4","scopeNote_4_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","SkillGroup_4_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","","","description_4_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","1970-01-01T00:00:00.004Z","1970-01-01T00:00:00.004Z"
"000000000000000000000005","originUri_5_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","uuidHistory_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuidHistory_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","code_5","scopeNote_5_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","fr_scopeNote_5_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","SkillGroup_5_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","fr_SkillGroup_5_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","altLabel_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","fr_altLabel_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
","description_5_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","fr_description_5_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","1970-01-01T00:00:00.005Z","1970-01-01T00:00:00.005Z"
"
`;

exports[`SkillGroupsDocToCsvTransform test transformSkillGroupSpecToCSVRow() should transform a SkillGroup to a CSV row 1`] = `
{
  "ALTLABELS_EN": "altLabel_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
  "ALTLABELS_FR": "fr_altLabel_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
",
  "CODE": "code_1",
  "CREATEDAT": "1970-01-01T00:00:00.001Z",
  "DESCRIPTION_EN": "description_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
  "DESCRIPTION_FR": "fr_description_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
  "ID": "000000000000000000000001",
  "ORIGINURI": "originUri_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
  "PREFERREDLABEL_EN": "SkillGroup_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
  "PREFERREDLABEL_FR": "fr_SkillGroup_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
  "SCOPENOTE_EN": "scopeNote_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
  "SCOPENOTE_FR": "fr_scopeNote_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
  "UPDATEDAT": "1970-01-01T00:00:00.001Z",
  "UUIDHISTORY": "uuidHistory_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuidHistory_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
}
`;
